--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <title>Appointments</title>
+    <meta name="theme-color" content="#ffffff" />
+    <link rel="icon" href="./favicon.png">
+    <title>Contacts</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
